Fix: Bootstrap uses vertical-align: bottom for table header cells, so it makes sense to position the sort icons from the bottom of the cell.
Fixes DataTables/DataTables 589

--- a/css/dataTables.bootstrap.scss
+++ b/css/dataTables.bootstrap.scss
@@ -93,7 +93,7 @@ table.dataTable thead {
 
 		&:after {
 			position: absolute;
-			top: 8px;
+			bottom: 8px;
 			right: 8px;
 			display: block;
 			font-family: 'Glyphicons Halflings';
